<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbackground"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="344dp"
        android:layout_height="393dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/custom_cardview"
        android:backgroundTint="#76E4A9"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/newAccPhoneNum"
                android:layout_width="244dp"
                android:layout_height="56dp"
                android:background="@drawable/custom_cardview"
                android:drawableLeft="@drawable/baseline_local_phone_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Phone"
                android:backgroundTint="#0B0B0B"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.875" />

            <EditText
                android:id="@+id/newAccPasswrd"
                android:layout_width="244dp"
                android:layout_height="56dp"
                android:background="@drawable/custom_cardview"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Password"
                android:backgroundTint="#0B0B0B"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.605" />

            <EditText
                android:id="@+id/newAccUserName"
                android:layout_width="244dp"
                android:layout_height="56dp"
                android:background="@drawable/custom_cardview"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Full Name"
                android:backgroundTint="#0B0B0B"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091" />

            <EditText
                android:id="@+id/newAccEmail"
                android:layout_width="244dp"
                android:layout_height="56dp"
                android:background="@drawable/custom_cardview"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Email"
                android:backgroundTint="#0B0B0B"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.344" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createNewAccBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#BD3030"
        android:text="Create Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.047" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backToLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:onClick="goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="16dp"
        android:indeterminateTint="@android:color/holo_orange_dark"
        android:maxWidth="100dip"
        android:maxHeight="100dip"
        android:minWidth="100dip"
        android:minHeight="100dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backToLoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/createNewAccBtn"
        app:layout_constraintVertical_bias="0.777" />
</androidx.constraintlayout.widget.ConstraintLayout>